--- a/src/app/components/cart-item/cart-item.component.html
+++ b/src/app/components/cart-item/cart-item.component.html
@@ -1,4 +1,4 @@
-<div class="cartItem">
+<div class="cartItem d-flex flex-row">
   <div class="card mb-3 bg-beige cartItem">
     <div class="card-body d-flex justify-content-between align-items-between">
       <div class="d-flex flex-row justify-content-center align-items-center">
@@ -9,8 +9,10 @@
       </div>
       <div class="d-flex align-items-center">
         <p class="itemPrice mt-3">{{ item.price | currency }}</p>
-        <button (click)="removeItem()"><fa-icon [icon]="faMinus"></fa-icon></button>
       </div>
     </div>
+  </div>
+  <div class="d-flex flex-row justify-content-center align-items-center ml-5 p-1">
+    <button (click)="removeItem()"><fa-icon [icon]="faMinus"></fa-icon></button>
   </div>
 </div> 
