--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -8,13 +8,18 @@
   text-align: center;
 }
 
+.bg-grape {
+  min-height: fit-content;
+}
+
 img {
   max-width: 75%;
 }
 
 .img-card {
   width: 30vw;
-  height: 40vh;
+  min-height: 35vh;
+  padding: 20px 0;
   color: white;
   text-align: center;
 }
